# aoc2022

./: .gitignore  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
bqn/: aoc.bqn  day01.bqn  day02.bqn  day05.bqn  day06.bqn  day08.bqn  day10.bqn  day11.bqn  main.bqn  util.bqn
haskell/: aoc.cabal
haskell/app/: Day01.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Main.hs
python/: aoc.py  day01.py
rust/: .rustfmt.toml
rust/src/: main.rs  normalize.rs
rust/src/day01/: mod.rs
rust/src/day02/: mod.rs
rust/src/day03/: mod.rs
rust/src/day04/: mod.rs
rust/src/day07/: mod.rs
rust/src/day11/: mod.rs  monkey.rs
rust/src/day14/: matrix.rs  mod.rs
rust/src/day15/: mod.rs
zig/: build.zig
zig/src/: main.zig
zig/src/day01/: solve.zig
zig/src/day02/: solve.zig
zig/src/day03/: solve.zig
zig/src/day12/: Grid.zig  solve.zig
