cabal-version: 3.4
name: aoc
version: 0.1.0.0

common common
  ghc-options: -Wall
  default-language: GHC2021
  default-extensions: OverloadedStrings, LambdaCase

executable aoc
  import: common
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base, array, containers, text, split
  other-modules: Day03, Day04, Day05, Day06
